# OpenCVThresholds

./: CMakeLists.txt  brightness.cpp  contrast.cpp  gray2binary.cpp  rgb2gray.cpp
Debug/: brightness  contrast  gray2binary  rgb2gray
assignment-one.build/Debug/brightness.build/Objects-normal/x86_64/: brightness.LinkFileList  brightness.d
assignment-one.build/Debug/contrast.build/Objects-normal/x86_64/: contrast.LinkFileList  contrast.d
assignment-one.build/Debug/gray2binary.build/Objects-normal/x86_64/: gray2binary.LinkFileList  gray2binary.d
assignment-one.build/Debug/rgb2gray.build/Objects-normal/x86_64/: rgb2gray.LinkFileList
assignment-one.xcodeproj/: project.pbxproj
assignment-one.xcodeproj/project.xcworkspace/xcuserdata/brock.xcuserdatad/: UserInterfaceState.xcuserstate
assignment-one.xcodeproj/xcshareddata/xcschemes/: brightness.xcscheme  contrast.xcscheme  gray2binary.xcscheme  rgb2gray.xcscheme
assignment-one.xcodeproj/xcuserdata/brock.xcuserdatad/xcschemes/: xcschememanagement.plist
simple-demo.build/Debug/DisplayImage.build/Objects-normal/x86_64/: DisplayImage.LinkFileList  test.d
simple-demo.build/Debug/ZERO_CHECK.build/: Script-65ED2BB82A9BD866AC146964.sh
simple-demo.xcodeproj/: project.pbxproj
simple-demo.xcodeproj/project.xcworkspace/xcuserdata/brock.xcuserdatad/: UserInterfaceState.xcuserstate
simple-demo.xcodeproj/xcshareddata/xcschemes/: DisplayImage.xcscheme  rgb2gray.xcscheme
simple-demo.xcodeproj/xcuserdata/brock.xcuserdatad/xcschemes/: xcschememanagement.plist
(+2 files in other folders)
